--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <link rel="stylesheet" href="./src/index.css">
-    <link rel="preload" href="https://cdn.auth0.com/styleguide/latest/lib/font/avenir-next/avenir-next-regular-italic.woff2" as="font" type="font/woff2" crossorigin>
+    <!-- <link rel="preload" href="https://cdn.auth0.com/styleguide/latest/lib/font/avenir-next/avenir-next-regular-italic.woff2" as="font" type="font/woff2" crossorigin> -->
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shop</title>
